@@ -86,26 +86,26 @@ namespace OpenRCT2::Ui::Windows
         RIDE_TYPE_LIM_LAUNCHED_ROLLER_COASTER,
         RIDE_TYPE_TWISTER_ROLLER_COASTER,
         RIDE_TYPE_HYPER_TWISTER,
+        RIDE_TYPE_LSM_LAUNCHED_ROLLER_COASTER,
         RIDE_TYPE_GIGA_COASTER,
         RIDE_TYPE_SUSPENDED_SWINGING_COASTER,
         RIDE_TYPE_COMPACT_INVERTED_COASTER,
         RIDE_TYPE_INVERTED_ROLLER_COASTER,
         RIDE_TYPE_INVERTED_IMPULSE_COASTER,
+        RIDE_TYPE_LAY_DOWN_ROLLER_COASTER,
+        RIDE_TYPE_FLYING_ROLLER_COASTER,
+        RIDE_TYPE_MULTI_DIMENSION_ROLLER_COASTER,
         RIDE_TYPE_MINI_SUSPENDED_COASTER,
         RIDE_TYPE_STEEPLECHASE,
         RIDE_TYPE_BOBSLEIGH_COASTER,
         RIDE_TYPE_MINE_RIDE,
         RIDE_TYPE_HEARTLINE_TWISTER_COASTER,
-        RIDE_TYPE_LAY_DOWN_ROLLER_COASTER,
-        RIDE_TYPE_FLYING_ROLLER_COASTER,
-        RIDE_TYPE_MULTI_DIMENSION_ROLLER_COASTER,
         RIDE_TYPE_REVERSE_FREEFALL_COASTER,
         RIDE_TYPE_VERTICAL_DROP_ROLLER_COASTER,
         RIDE_TYPE_AIR_POWERED_VERTICAL_COASTER,
         RIDE_TYPE_HYBRID_COASTER,
         RIDE_TYPE_SINGLE_RAIL_ROLLER_COASTER,
         RIDE_TYPE_ALPINE_COASTER,
-        RIDE_TYPE_LSM_LAUNCHED_ROLLER_COASTER,
 
         // Gentle rides
         RIDE_TYPE_MONORAIL_CYCLES,
