@@ -1,5 +1,6 @@
 0.4.17 (in development)
 ------------------------------------------------------------------------
+- Improved: [#23123] Improve sorting of roller coasters in build new ride menu.
 
 0.4.16 (2024-11-03)
 ------------------------------------------------------------------------
